--- a/stylefile.css
+++ b/stylefile.css
@@ -1,3 +1,12 @@
 body{
   background-image: url("background.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+
+}
+
+body{
+  color: white;
+  font-family:verdana;
+  font-size="6"
 }
